@@ -1,7 +1,7 @@
 /**   
  * License Agreement for Jaeksoft OpenSearchServer
  *
- * Copyright (C) 2009 Emmanuel Keller / Jaeksoft
+ * Copyright (C) 2009-2010 Emmanuel Keller / Jaeksoft
  * 
  * http://www.open-search-server.com
  * 
@@ -22,73 +22,90 @@
  *  If not, see <http://www.gnu.org/licenses/>.
  **/
 
-package com.jaeksoft.searchlib.util;
+package com.jaeksoft.searchlib.config;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintWriter;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
 
 public class ConfigFileRotation {
 
-	private File directory;
 	private File masterFile;
 	private File tempFile;
+	private PrintWriter tempPrintWriter;
 	private File oldFile;
 
-	public ConfigFileRotation(File directory, String masterName,
-			String tempName, String oldName) {
-		init(directory, masterName, tempName, oldName);
-	}
+	private final Lock lock = new ReentrantLock(true);
 
-	private void init(File directory, String masterName, String tempName,
-			String oldName) {
-		this.directory = directory;
-		this.masterFile = new File(directory, masterName);
-		this.tempFile = new File(directory, tempName);
-		this.oldFile = new File(directory, oldName);
-	}
-
-	public ConfigFileRotation(File directory, String masterName) {
+	protected ConfigFileRotation(File directory, String masterName) {
 		String ext = FilenameUtils.getExtension(masterName);
 		String baseName = FilenameUtils.getBaseName(masterName);
 		init(directory, masterName, baseName + "_tmp." + ext, baseName
 				+ "_old." + ext);
 	}
 
+	private void init(File directory, String masterName, String tempName,
+			String oldName) {
+		try {
+			lock.lock();
+			this.masterFile = new File(directory, masterName);
+			this.tempFile = new File(directory, tempName);
+			this.oldFile = new File(directory, oldName);
+			this.tempPrintWriter = null;
+		} finally {
+			lock.unlock();
+		}
+	}
+
+	private void freeTempPrintWriter() {
+		if (tempPrintWriter == null)
+			return;
+		tempPrintWriter.close();
+		tempPrintWriter = null;
+	}
+
+	public void abort() {
+		try {
+			lock.lock();
+			freeTempPrintWriter();
+		} finally {
+			lock.unlock();
+		}
+	}
+
 	public void rotate() throws IOException {
-		synchronized (directory) {
-			oldFile.delete();
+		try {
+			lock.lock();
+			freeTempPrintWriter();
+			if (oldFile.exists())
+				oldFile.delete();
 			if (!tempFile.exists())
 				return;
 			if (masterFile.exists())
 				FileUtils.moveFile(masterFile, oldFile);
 			FileUtils.moveFile(tempFile, masterFile);
-			// Ensure that several call to rotate delete useful files
-			oldFile = null;
-			masterFile = null;
-			tempFile = null;
+		} finally {
+			lock.unlock();
 		}
 	}
 
 	public PrintWriter getTempPrintWriter() throws IOException {
-		if (!tempFile.exists())
-			FileUtils.touch(tempFile);
-		return new PrintWriter(tempFile);
-	}
-
-	public File getTempFile() {
-		return tempFile;
-	}
-
-	public File getOldFile() {
-		return oldFile;
-	}
-
-	public File getMasterFile() {
-		return masterFile;
+		try {
+			lock.lock();
+			if (tempPrintWriter != null)
+				return tempPrintWriter;
+			if (!tempFile.exists())
+				FileUtils.touch(tempFile);
+			tempPrintWriter = new PrintWriter(tempFile);
+			return tempPrintWriter;
+		} finally {
+			lock.unlock();
+		}
 	}
 
 }
